Resolve "Keep loading spinners from jumping around on search page"

--- a/frontend/src/model-homepages/ModelHomepage.css
+++ b/frontend/src/model-homepages/ModelHomepage.css
@@ -102,9 +102,9 @@
 }
 
 .spinner-border {
+    position: relative;
     height: 3rem !important;
     width: 3rem !important;
-    position: absolute;
     display: block !important;
     top: 50%;
     left: 50%;
@@ -187,6 +187,7 @@ input:focus {
 
 .cards-container {
     text-align: center;
+    height: 100% !important;
 }
 
 .single-card {
@@ -242,8 +243,8 @@ a.single-card:hover {
     display: flex;
     justify-content: center;
     width: 100%;
-    margin-left: -16px !important;    
     padding-bottom: 1rem;
+    position: sticky;
 }
 
 .page-item a{
@@ -290,6 +291,7 @@ a.single-card:hover {
         position: relative;
         flex: auto;
         width: 100%;
+        height: fit-content;
     }
 
     .results-compare {
@@ -354,5 +356,6 @@ a.single-card:hover {
 
     .cards-container {
         text-align: left;
+        height: 100% !important;
     }
 }
